# llm-security-scanner

./: .llm-scanner.yml  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_rule.md
.github/workflows/: ci.yml
docs/: 01_Project_Charter.docx  02_PRD.docx  03_Technical_Design.docx  04_Project_Roadmap.docx  05_Contributing_Guidelines.docx
rules/: schema.yaml
rules/builtin/LLM02_insecure_output/: LLM02-001_llm-output-in-eval.yaml  LLM02-005_llm-output-in-deserialization.yaml
rules/builtin/LLM04_model_dos/: LLM04-001_missing-max-tokens-openai.yaml  LLM04-003_missing-timeout.yaml
rules/builtin/LLM06_sensitive_info/: LLM06-002_secret-in-system-prompt.yaml  LLM06-003_system-prompt-exposed.yaml
src/llm_scanner/: __init__.py  cli.py  config.py  discovery.py  scanner.py
src/llm_scanner/findings/: __init__.py  models.py  suppression.py
src/llm_scanner/formatters/: __init__.py  json_fmt.py  sarif.py  text.py
src/llm_scanner/parsers/: base.py  js_parser.py  python_parser.py
src/llm_scanner/rules/: __init__.py  engine.py  matchers.py  models.py
tests/: __init__.py
tests/fixtures/python/clean/: prompt_injection.py
tests/fixtures/python/vulnerable/: excessive_agency.py  insecure_output.py  missing_max_tokens.py  prompt_injection.py  sensitive_info.py
tests/integration/: test_scan_pipeline.py
tests/unit/: test_discovery.py  test_matchers.py  test_models.py  test_rule_engine.py  test_suppression.py
(+16 files in other folders)
